<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:background="#FFFFFF"
    >
    <TextView
        android:id="@+id/location_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="@dimen/headingsize"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/slotnum_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot_number"
        android:textSize="18dp"
        />
    <TextView
        android:id="@+id/startdate_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/start_date"
        />
    <TextView
        android:id="@+id/enddate_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/end_date"
        />
    <Button
        android:id="@+id/delete_booking_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_booking"
        android:textSize="15dp"
        android:layout_marginLeft="210dp"
        />
</LinearLayout>