<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/carr"
    tools:context="parking.eaze.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="80dp"
        android:text="@string/login_to_parking_app"
        android:textColor="#ffffff"
        android:textSize="24sp"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeftText"
        android:layout_marginRight="35dp"
        android:layout_marginTop="50dp"
        android:text="@string/username_or_email_address"
        android:textSize="@dimen/textsize"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/email"
        android:hint="@string/enter_your_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="35dp"
        android:layout_marginTop="@dimen/marginTopEditText"
        android:layout_marginLeft="@dimen/marginLeftEditbox"
        android:textColorHint="#C0C0C0"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/password"
        android:textSize="@dimen/textsize"
        android:layout_marginLeft="@dimen/marginLeftText"
        android:textColor="#ffffff"
        />
    <EditText
        android:id="@+id/password"
        android:hint="@string/enter_your_password"
        android:layout_width="match_parent"
        android:layout_marginRight="35dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopEditText"
        android:textColorHint="#C0C0C0"
        android:layout_marginLeft="@dimen/marginLeftEditbox"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginLeft="@dimen/marginLeftText"
            android:textColor="#ffffff"
            android:background="#808080"
            />
        <Button
            android:id="@+id/loginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginLeft="10dp"
            android:textColor="#ffffff"
            android:background="#808080"
            />
    </LinearLayout>


</LinearLayout>
