<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.ParkingArea1"
    android:background="@drawable/carr">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/select_date"
                android:textSize="@dimen/textsize"
                android:textColor="#ffffff"/>

            <EditText
                android:id="@+id/ParkingArea1_start_dd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dd"
                android:textSize="@dimen/textsize"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h"
                android:textSize="@dimen/textsize"
                android:textColor="#ffffff"/>

            <EditText
                android:id="@+id/ParkingArea1_start_mm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/mm"
                android:textSize="@dimen/textsize"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h1"
                android:textSize="@dimen/textsize"
                android:textColor="#ffffff"/>

            <EditText
                android:id="@+id/ParkingArea1_start_yyyy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/yyyy"
                android:textSize="@dimen/textsize"
                android:textColorHint="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/start_time"
                android:textSize="@dimen/textsize"
                android:textColor="#ffffff"/>

            <Spinner
                android:id="@+id/ParkingArea1_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbarSize="22dp" />

            <Spinner
                android:id="@+id/ParkingArea1_start_mins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbarSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="22dp"
                android:text="@string/duration"
                android:textSize="@dimen/textsize"
                android:textColor="#ffffff"/>

            <Spinner
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:scrollbarSize="22dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/hrs"
                android:textSize="@dimen/textsize"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <Button
            android:id="@+id/show_slots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/show_available_slots"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:background="#707070"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/ParkingArea1_slot1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slot1"
                android:textSize="@dimen/textsize"
                android:visibility="invisible"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/ParkingArea1_slot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/slot2"
                android:textSize="@dimen/textsize"
                android:visibility="invisible"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="15dp"
            android:background="#707070"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ParkingArea1_slot3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slot3"
                android:textSize="@dimen/textsize"
                android:visibility="invisible"
                android:textColor="#ffffff"/>

            <Button
                  android:id="@+id/ParkingArea1_slot4"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="60dp"
                  android:text="@string/slot4"
                  android:textSize="@dimen/textsize"
                  android:visibility="invisible"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="15dp"
            android:background="#707070"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/ParkingArea1_slot5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slot5"
                android:textSize="@dimen/textsize"
                android:visibility="invisible"
                android:textColor="#ffffff"/>

            <Button
                  android:id="@+id/ParkingArea1_slot6"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="60dp"
                  android:text="@string/slot6"
                  android:textSize="@dimen/textsize"
                  android:visibility="invisible"
                android:textColor="#ffffff"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
