<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.SendFeedback">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="#FFFFFF"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:text="@string/feeback"
            android:textSize="@dimen/headingsize" />

        <EditText
            android:id="@+id/user_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/type_your_feedback" />

        <Button
            android:id="@+id/sendbutton_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="20dp"
            android:text="@string/send"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replies_from_admin"
            android:textSize="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            tools:context="parking.eaze.LoginScreen">

            <ListView
                android:id="@+id/replyfromadmin_listview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></ListView>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
