<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homee"
    tools:context=".chooseLocation">

    <Button
        android:id="@+id/button4"
        android:layout_width="158dp"
        android:layout_height="77dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="353dp"
        android:layout_marginBottom="301dp"
        android:background="#000000"
        android:text="@string/humber_parking"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="158dp"
        android:layout_height="77dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="457dp"
        android:layout_marginBottom="197dp"
        android:background="#000000"
        android:text="@string/toronto_pearson_parking"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="158dp"
        android:layout_height="77dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="555dp"
        android:layout_marginBottom="99dp"
        android:background="#000000"
        android:text="@string/about_us"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="298dp"
        android:layout_height="75dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="603dp"
        android:text="@string/parking_eaze"
        android:textAlignment="gravity"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>